kubernetes/reddit/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      name: mongo
      labels:
        app: mongo
    spec:
      containers:
      - image: mongo:4
        name: mongo
        volumeMounts:
        - mountPath: /data/db
          name: mongo-data
      hostAliases:
      - hostnames:
        - "postdb"
        - "commentdb"
        - "mongodb"
        ip: "10.244.69.200"
#TEST:
      volumes:
      - name: mongo-data
        hostPath:
          path: "/data/db"

#ODLS
#        volumes:
#          - reddit_db:/data/db
#        networks:
#          default:
#            aliases:
#              - post_db
#              - comment_db
#              - mongo_db
