kubernetes/reddit/ui-ingress.yml
---
#apiVersion: extensions/v1beta1
#apiVersion: extensions/v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  labels:
    app: reddit
    component: ui
  annotations:
     kubernetes.io/ingress.class: "nginx"
     kubernetes.io/ingress.allow-http: "false"
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
#  backend:
#    serviceName: ui
#    servicePort: 80
#  ingressClassName: ui
  tls:
  - secretName: ui-ingress
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui
            port:
              number: 80
